<b><#selectbg_g>Jun 25,2024</#></b>

  <*> Add Some Tweak Changes, and Improvements</*>



<b><#selectbg_g>NOTES :</#></b>

  <*> Use KernelSU manager v0.7.6 for Android 9-10 ROMs</*>
  <*> Use KernelSU manager v0.9.5 for Android 11-13 ROMs</*>
  <*> Kernel need sometimes to settle.</*>



<b><#selectbg_g>AROMA installer by :</#></b>

  <*> Ryuuji @ItsRyuujiX</*>