@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-TheOneMemoryヘイゼル"
+CONFIG_LOCALVERSION="-TOMxHMP"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_NO_HZ=y
@@ -46,6 +46,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_KPROBE_EVENTS is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
+CONFIG_THIN_ARCHIVES=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_ARCH_HAS_REFCOUNT_FULL=y
 CONFIG_ARCH_HAS_REFCOUNT=y
@@ -76,11 +77,14 @@ CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_CMA=y
+CONFIG_ZSWAP=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK="ff"
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
-CONFIG_PROCESS_RECLAIM=y
+# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 CONFIG_ARMV8_DEPRECATED=y
@@ -93,7 +97,11 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
+CONFIG_KUSER_HELPERS=y
+CONFIG_KEYS_COMPAT=y
 CONFIG_COMPAT_VDSO=y
+CONFIG_CROSS_COMPILE=""
+CONFIG_CROSS_COMPILE_COMPAT=""
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
@@ -112,6 +120,7 @@ CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_UNIX_SCM=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_NET_KEY=y
@@ -291,6 +300,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
+# CONFIG_BLK_DEV_THROTTLING is not set
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
@@ -738,6 +748,8 @@ CONFIG_PSTORE_RAM=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_DWARF4=y
+# CONFIG_DEBUG_FS is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_PANIC_TIMEOUT=5
